--- a/naomi-gan.html
+++ b/naomi-gan.html
@@ -1,283 +1,150 @@
-<!-- ============================= -->
-<!-- MAP BRAND STYLE (GLOBAL) -->
-<!-- ============================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Naomi Gan — MAP Scouting Report</title>
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
+  body {margin:0;background:#f5f7fb;font-family:'Montserrat',sans-serif;}
+  .prospect-page {max-width:960px;margin:0 auto 3rem;padding:1.5rem;color:#1a1a1a;}
 
-  .prospect-page {
-    max-width: 960px;
-    margin: 0 auto 2.5rem auto;
-    font-family: 'Montserrat', sans-serif;
-    color: #1a1a1a;
-  }
+  /* HERO */
+  .prospect-hero {display:flex;flex-wrap:wrap;justify-content:space-between;gap:1.25rem;
+    padding:1.75rem;border-radius:14px;background:#2E5084;color:#fff;margin-bottom:2rem;}
+  .prospect-name {font-family:'Archivo Black';font-size:2rem;margin-bottom:.25rem;text-transform:uppercase;}
+  .prospect-tagline {font-size:1rem;font-weight:600;margin-bottom:.15rem;}
+  .prospect-subtitle {font-size:.9rem;opacity:.9;margin:0;}
+  .prospect-grade-card {min-width:200px;padding:1rem 1.25rem;border-radius:12px;
+    background:rgba(255,255,255,.15);border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(4px);}
+  .grade-label {font-size:.7rem;opacity:.8;text-transform:uppercase;}
+  .grade-score {font-family:'Archivo Black';font-size:2.2rem;margin:.2rem 0;}
+  .grade-tier {font-size:.9rem;font-weight:600;}
 
-  .prospect-hero {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 1.25rem;
-    padding: 1.5rem 1.25rem;
-    border-radius: 12px;
-    background: #2E5084;
-    color: #ffffff;
-    margin-bottom: 1.5rem;
-  }
+  /* Pills */
+  .recommendation-pill {display:flex;align-items:center;gap:6px;background:#fff;color:#2E5084;
+    padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;width:fit-content;}
+  .pill-box {width:12px;height:12px;border-radius:3px;}
+  .pill-red {background:#ef4444;}
 
-  .prospect-name {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.85rem;
-    margin: 0 0 0.25rem;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-  }
+  /* META */
+  .prospect-meta {display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
+  .meta-column {flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
+  .meta-title {font-family:'Archivo Black';font-size:.9rem;color:#2E5084;margin-bottom:.7rem;text-transform:uppercase;}
+  .meta-list {list-style:none;margin:0;padding:0;}
+  .meta-list li {display:flex;justify-content:space-between;padding:.28rem 0;
+    border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
+  .meta-value {text-align:right;margin-left:1rem;}
 
-  .prospect-tagline {
-    margin: 0 0 0.15rem;
-    font-size: 0.95rem;
-    font-weight: 600;
-  }
-
-  .prospect-subtitle {
-    margin: 0;
-    font-size: 0.85rem;
-    opacity: 0.9;
-  }
-
-  .prospect-grade-card {
-    min-width: 180px;
-    padding: 0.75rem 1rem;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.15);
-    border: 1px solid rgba(255,255,255,0.3);
-    backdrop-filter: blur(4px);
-  }
-
-  .grade-label {
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    opacity: 0.8;
-    margin-bottom: 0.25rem;
-  }
-
-  .grade-score {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.9rem;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-tier {
-    font-size: 0.8rem;
-    font-weight: 600;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-note {
-    font-size: 0.75rem;
-    opacity: 0.85;
-  }
-
-  .prospect-meta {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-  }
-
-  .meta-column {
-    flex: 1 1 260px;
-    background: #ffffff;
-    border-radius: 10px;
-    padding: 1rem 1.1rem;
-    border: 1px solid #dce2ee;
-  }
-
-  .meta-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.85rem;
-    text-transform: uppercase;
-    letter-spacing: 0.07em;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .meta-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .meta-list li {
-    display: flex;
-    justify-content: space-between;
-    padding: 0.2rem 0;
-    border-bottom: 1px dotted #e5e8f1;
-    font-size: 0.85rem;
-  }
-
-  .meta-value {
-    text-align: right;
-    margin-left: 1rem;
-  }
-
-  .prospect-section {
-    margin-bottom: 1.25rem;
-    padding: 1rem 1.1rem;
-    border-radius: 10px;
-    border: 1px solid #dce2ee;
-    background: #ffffff;
-  }
-
-  .section-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .section-body {
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list {
-    padding-left: 1.1rem;
-    margin: 0;
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list li {
-    margin-bottom: 0.35rem;
-  }
-
-  @media (max-width: 640px) {
-    .meta-list li {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    .meta-value {
-      text-align: left;
-      margin-left: 0;
-      margin-top: 0.1rem;
-    }
-  }
+  /* CONTENT */
+  .prospect-section {background:#fff;border-radius:12px;padding:1.15rem 1.35rem;border:1px solid #dce2ee;margin-bottom:1.4rem;}
+  .section-title {font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
+  .section-body {font-size:.9rem;line-height:1.52;}
+  .section-list li {font-size:.9rem;line-height:1.52;margin-bottom:.38rem;}
 </style>
+</head>
 
+<body>
 <div class="prospect-page">
 
-  <!-- ============================= -->
-  <!-- HERO -->
-  <!-- ============================= -->
+  <!-- ============ HERO ============ -->
   <section class="prospect-hero">
-    <div class="prospect-hero-main">
-      <h1 class="prospect-name">NAOMI GAN</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️ Prospect · Behind the Scenes Archetype · Investment Banking Track</p>
-      <p class="prospect-subtitle">UC Berkeley · Lacrosse 🥍 · Class of 2028</p>
+    <div>
+      <h1 class="prospect-name">Naomi Gan</h1>
+      <p class="prospect-tagline">⭐️⭐️⭐️ Investment Banking Prospect</p>
+      <p class="prospect-subtitle">University of California, Berkeley · Lacrosse · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">8.7</div>
-      <div class="grade-tier">Round 4–5 Candidate</div>
-      <div class="grade-note">Quality performer · limited MAP sample due to ACL injury</div>
+      <div class="grade-score">81</div>
+      <div class="grade-tier">Round 4–5</div>
+
+      <div class="recommendation-pill">
+        <div class="pill-box pill-red"></div>
+        <div class="pill-box pill-red"></div>
+        <div class="pill-box pill-red"></div>
+        <span>Watchlist Recommendation</span>
+      </div>
     </div>
   </section>
 
-  <!-- ============================= -->
-  <!-- META -->
-  <!-- ============================= -->
+
+  <!-- ============ META ============ -->
   <section class="prospect-meta">
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">School</span><span class="meta-value">UC Berkeley</span></li>
-        <li><span class="meta-key">Major</span><span class="meta-value">Economics</span></li>
-        <li><span class="meta-key">Minor</span><span class="meta-value">N/A</span></li>
-        <li><span class="meta-key">Year</span><span class="meta-value">2028</span></li>
-        <li><span class="meta-key">Sport</span><span class="meta-value">Lacrosse</span></li>
-        <li><span class="meta-key">Hometown</span><span class="meta-value">Palos Verdes Estates, CA</span></li>
+        <li><span>School</span><span class="meta-value">University of California, Berkeley</span></li>
+        <li><span>Major</span><span class="meta-value">Economics</span></li>
+        <li><span>Minor</span><span class="meta-value">N/A</span></li>
+        <li><span>Year</span><span class="meta-value">2028</span></li>
+        <li><span>GPA</span><span class="meta-value">3.8</span></li>
+        <li><span>Sport</span><span class="meta-value">Lacrosse</span></li>
+        <li><span>Hometown</span><span class="meta-value">Palos Verdes Estates, CA</span></li>
       </ul>
     </div>
 
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">Fall Rank</span><span class="meta-value">11 / 63</span></li>
-        <li><span class="meta-key">GPA</span><span class="meta-value">3.8</span></li>
-        <li><span class="meta-key">Personality</span><span class="meta-value">1. Behind the Scenes</span></li>
-        <li><span class="meta-key">Performance</span>
-          <span class="meta-value">
-            Strong early work + interviews · stepped away after ACL tear during season
-          </span>
-        </li>
+        <li><span>Fellowship Rank</span><span class="meta-value">29 / 78</span></li>
+        <li><span>Interview #1</span><span class="meta-value">92.9%</span></li>
+        <li><span>Interview #2</span><span class="meta-value">96.2%</span></li>
+        <li><span>Interview #3</span><span class="meta-value">89.0%</span></li>
+        <li><span>Personality</span><span class="meta-value">Behind the Scenes (Reserved, Detail-Oriented)</span></li>
+        <li><span>Leadership</span><span class="meta-value">Democratic Leader (Collaborative, Shared Decision-Making)</span></li>
+        <li><span>Teamwork</span><span class="meta-value">Supportive (Steady, Reliable)</span></li>
       </ul>
     </div>
   </section>
 
-  <!-- ============================= -->
-  <!-- OVERVIEW -->
-  <!-- ============================= -->
+
+  <!-- ============ CONTENT ============ -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Naomi is a high-character Behind the Scenes archetype: quieter, diligent, and deeply focused on the
-      quality of her work rather than the volume of her voice. A 3.8 GPA Economics major at UC Berkeley and
-      former valedictorian with a 1530 SAT, she brings serious academic horsepower, paired with a thoughtful,
-      process-driven mindset.
+      Naomi is a high-character Behind the Scenes archetype: quieter, diligent, and focused on the quality of her work rather than volume of voice. A 3.8 GPA Economics major at UC Berkeley and former valedictorian with a 1530 SAT, she brings serious academic horsepower paired with a thoughtful, process-driven mindset.
       <br><br>
-      During her time in the Diamond League, Naomi delivered strong assignments and showed real interview
-      ability — thoughtful, structured, and concise. Unfortunately, an ACL tear early in lacrosse season forced
-      her to step away from the case competition and MAP’s live phases. Her MAP grade and round projection
-      reflect that limited sample more than any concerns about capability or upside.
+      During the Diamond League, Naomi delivered strong assignments and showed real interview ability — thoughtful, structured, concise. Unfortunately, an ACL tear early in lacrosse season forced her to step away from case competition and live MAP phases. Her grade reflects sample size more than ability.
       <br><br>
-      In the reps she did get, Naomi presented as exactly the kind of behind-the-scenes teammate who quietly
-      keeps projects moving: she listens first, executes carefully, and aims to be recognized for the quality of
-      her output rather than self-promotion.
+      In the reps she did get, Naomi looked like the teammate who quietly keeps operations moving — she listens first, executes carefully, and lets her work speak.
     </p>
   </section>
 
-  <!-- ============================= -->
-  <!-- STRENGTHS -->
-  <!-- ============================= -->
+
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Academic excellence:</strong> 3.8 GPA at Berkeley, valedictorian, National Merit Finalist, strong quant foundation.</li>
-      <li><strong>Behind the Scenes discipline:</strong> Quiet, focused, and diligent — prefers to let her work speak for itself.</li>
-      <li><strong>Early infrastructure exposure:</strong> AECOM internship provided cross-functional experience across finance, governance, and strategy.</li>
-      <li><strong>Governance + stakeholder skills:</strong> Youth Board work at the library built nonprofit governance and stakeholder management muscles.</li>
-      <li><strong>Leadership in mental health & sport:</strong> Co-founded and led a Morgan’s Message chapter for student-athlete mental health.</li>
-      <li><strong>Structured thinker:</strong> Strong research, presentation, and data analysis skills with R and Excel.</li>
-      <li><strong>High character & resilience:</strong> Managed a difficult ACL setback in the middle of season and program.</li>
+      <li>Academic excellence — 3.8 GPA, valedictorian, National Merit recognition.</li>
+      <li>Behind-the-Scenes discipline — focused, diligent, execution-first.</li>
+      <li>Infrastructure exposure via AECOM internship.</li>
+      <li>Governance skills from youth board + stakeholder work.</li>
+      <li>Mental health leadership through Morgan’s Message.</li>
+      <li>Structured thinker with strong research + analysis skills.</li>
+      <li>High character + resilience through ACL adversity.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
-  <!-- AREAS FOR DEVELOPMENT -->
-  <!-- ============================= -->
+
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Limited MAP tape due to ACL injury — fewer data points than peers across the full case cycle.</li>
-      <li>Needs more hands-on valuation and modeling reps to match top-tier IB candidates.</li>
-      <li>Could benefit from leaning slightly more vocal in team settings to ensure her ideas are fully surfaced.</li>
-      <li>Additional finance-specific internships will help translate her infrastructure and governance exposure into a clear IB path.</li>
+      <li>Limited MAP sample due to injury — fewer data points.</li>
+      <li>Needs more valuation + modeling reps.</li>
+      <li>Could express voice more loudly in group settings.</li>
+      <li>More finance-specific internships recommended.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
-  <!-- PROJECTION -->
-  <!-- ============================= -->
+
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A 3-star, Round 4–5 MAP prospect whose current grade is driven primarily by sample size, not talent. 
-      When active in the program, Naomi showed strong academic foundation, mature judgment, and solid 
-      interview presence. With a healthy season, more reps, and continued technical development, she has the 
-      potential to rise meaningfully in future MAP cycles and become a dependable, quietly effective analyst.
+      A 3-Star, Round 4–5 MAP prospect whose evaluation reflects limited reps more than ability. Naomi displayed strong academics, maturity, and thoughtful interview presence. With more live experience and technical development, she could rise meaningfully and become a quietly effective analyst in future cycles.
     </p>
   </section>
 
 </div>
+</body>
+</html>
