--- a/isaac-lief.html
+++ b/isaac-lief.html
@@ -81,7 +81,7 @@
         <li><span>Year</span><span class="meta-value">2028</span></li>
         <li><span>GPA</span><span class="meta-value">3.96</span></li>
         <li><span>Sport</span><span class="meta-value">Fencing</span></li>
-        <li><span>Hometown</span><span class="meta-value">Newport Beach, CA</span></li>
+        <li><span>Hometown</span><span class="meta-value">Pelham, NY</span></li>
       </ul>
     </div>
 
