--- a/grace-hodgins.html
+++ b/grace-hodgins.html
@@ -26,7 +26,7 @@
   .recommendation-pill {display:flex;align-items:center;gap:6px;background:#fff;color:#2E5084;
     padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;width:fit-content;}
   .pill-box {width:12px;height:12px;border-radius:3px;}
-  .pill-green {background:#22c55e;} /* TOP Recommendation – green */
+  .pill-green {background:#22c55e;} /* TOP Recommendation */
 
   /* META */
   .prospect-meta {display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
@@ -37,7 +37,7 @@
     border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
   .meta-value {text-align:right;margin-left:1rem;}
 
-  /* CONTENT BLOCKS */
+  /* CONTENT */
   .prospect-section {background:#fff;border-radius:12px;padding:1.15rem 1.35rem;
     border:1px solid #dce2ee;margin-bottom:1.4rem;}
   .section-title {font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
@@ -72,7 +72,7 @@
   </section>
 
 
-  <!-- META SECTION -->
+  <!-- META -->
   <section class="prospect-meta">
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
@@ -90,7 +90,7 @@
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span>Fellowship Rank</span><span class="meta-value">3</span></li>
+        <li><span>Fellowship Rank</span><span class="meta-value">3 / 65</span></li>
         <li><span>Interview #1</span><span class="meta-value">87.10%</span></li>
         <li><span>Interview #2</span><span class="meta-value">96.20%</span></li>
         <li><span>Interview #3</span><span class="meta-value">86.50%</span></li>
@@ -107,53 +107,53 @@
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
       Grace is a disciplined and driven 4-star prospect with a rare blend of academic sharpness, international experience, 
-      and real entrepreneurial initiative. As a Business Administration major at UNC with a 3.8 GPA, she operates with 
-      maturity beyond her year — pairing a thoughtful communication style with a grounded leadership presence.
+      and entrepreneurial initiative. As a Business Administration major with a 3.8 GPA, she operates with maturity, poise, 
+      and a thoughtful communication style that teams gravitate toward.
       <br><br>
-      Her resume demonstrates early business building instincts through **Vireo Concepts**, where she co-founded a 
-      sustainability initiative focused on eco-friendly plastics and B2B sourcing. She further reinforced those 
-      fundamentals with hands-on customer-facing work experience, competitive swimming at the D1 level, and 
-      leadership exposure through **Carolina Leadership Initiative**, DiSC development, and volunteer mentorship.
+      Through **Vireo Concepts**, she demonstrated business-building instincts early — sourcing sustainable materials, 
+      managing B2B conversations, and exploring commercial fit. Add to that international competitive swimming experience, 
+      leadership exposure through Carolina Leadership Initiative, and mentorship through Athlete to Athlete, and she profiles 
+      as a balanced, well-rounded contributor with upward trajectory.
       <br><br>
-      During MAP, she entered strong and ranked Top 3 in her cohort — showing poise in interviews, sound reasoning, 
-      and a balanced, team-first approach to problem solving. While her execution phase as captain in case competition 
-      ended with mixed momentum, it served as a valuable rep in ownership, accountability, and strategic follow-through. 
-      Her ceiling is higher than her minor missteps — the underlying talent, drive, and growth track are clear.
+      In MAP she ranked **Top 3 / 65**, interviewing well with structured reasoning and confidence. While her case delivery 
+      phase ended unevenly as captain, it served as a productive rep in ownership and accountability — her upside remains high 
+      as she continues maturing into execution leadership.
     </p>
   </section>
+
 
   <!-- STRENGTHS -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li>Strong academic performer — **3.8 GPA** in Business Administration.</li>
-      <li>Entrepreneurial builder — co-founded **sustainability venture (Vireo Concepts)**.</li>
-      <li>Competitive international athletic résumé — **National Team swimmer for Ireland**.</li>
-      <li>Structured communicator — strong poise, presence, maturity.</li>
-      <li>Leadership exposure through Carolina Leadership Initiative + mentorship programs.</li>
-      <li>Top 3 in MAP Fellowship; consistent interview performance with high upside.</li>
+      <li>3.8 GPA — strong foundational academic engine.</li>
+      <li>Entrepreneurial builder through sustainability venture **Vireo Concepts**.</li>
+      <li>Irish National Team swimmer — global competitive exposure.</li>
+      <li>Composed communicator — poised and professional.</li>
+      <li>Leadership experience (DiSC, Carolina Leadership Initiative, mentorship).</li>
+      <li>MAP Top 3 performance — high ceiling with strong behavioral interview output.</li>
     </ul>
   </section>
 
-  <!-- AREAS FOR DEVELOPMENT -->
+
+  <!-- DEVELOPMENT -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Continue strengthening end-to-end ownership during high-pressure deliverables.</li>
-      <li>Increase confidence in driving teams through ambiguity — she often has the right instincts.</li>
-      <li>Capitalize on entrepreneurial experience by layering business finance terminology.</li>
+      <li>Continue building confidence in leading execution through ambiguity.</li>
+      <li>Sharpen ownership cadence during fast-paced deliverables.</li>
+      <li>Layer finance terminology on top of strong business fundamentals.</li>
     </ul>
   </section>
+
 
   <!-- PROJECTION -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      Grace projects as a **Round 1–2 long-term upside prospect** with leadership maturity, high coachability, and a 
-      strong academic engine. Her mix of sustainability entrepreneurship, global perspective, and competitive swim résumé 
-      make her culturally and intellectually versatile — a profile attractive for wealth management, private banking, and 
-      client-facing advisory tracks. With continued reps in execution ownership, she could develop into a high-trust, 
-      high-impact analyst capable of leading phases confidently and progressing toward captaincy responsibilities.
+      Grace projects as a **Round 1–2 high-upside prospect** with maturity, coachability, and strong academic/athletic 
+      indicators. She fits naturally in client-facing WM/Private Banking/Advisory tracks — and with continued execution 
+      reps she could develop into a reliable culture leader and trusted analyst over time.
     </p>
   </section>
 
