--- a/makenna-stretz.html
+++ b/makenna-stretz.html
@@ -23,6 +23,7 @@
   .grade-score {font-family:'Archivo Black';font-size:2.2rem;margin:.2rem 0;}
   .grade-tier {font-size:.9rem;font-weight:600;}
 
+  /* Recommendation Pill */
   .recommendation-pill {display:flex;align-items:center;gap:6px;background:#fff;color:#2E5084;
     padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;width:fit-content;}
   .pill-box {width:12px;height:12px;border-radius:3px;}
@@ -37,7 +38,7 @@
     border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
   .meta-value {text-align:right;margin-left:1rem;}
 
-  /* CONTENT */
+  /* CONTENT SECTIONS */
   .prospect-section {background:#fff;border-radius:12px;padding:1.15rem 1.35rem;
     border:1px solid #dce2ee;margin-bottom:1.4rem;}
   .section-title {font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
@@ -49,7 +50,7 @@
 <body>
 <div class="prospect-page">
 
-  <!-- HERO -->
+  <!-- ================= HERO ================= -->
   <section class="prospect-hero">
     <div>
       <h1 class="prospect-name">Makenna Stretz</h1>
@@ -61,7 +62,6 @@
       <div class="grade-label">MAP Prospect Grade</div>
       <div class="grade-score">89</div>
       <div class="grade-tier">Round 2–3</div>
-
       <div class="recommendation-pill">
         <div class="pill-box pill-yellow"></div>
         <div class="pill-box pill-yellow"></div>
@@ -72,14 +72,14 @@
   </section>
 
 
-  <!-- META -->
+  <!-- ================= META ================= -->
   <section class="prospect-meta">
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
         <li><span>School</span><span class="meta-value">Stanford University</span></li>
-        <li><span>Major</span><span class="meta-value">Science, Technology & Society (Innovation & Organization)</span></li>
-        <li><span>Minor</span><span class="meta-value">N/A</span></li>
+        <li><span>Major</span><span class="meta-value">Science, Technology and Society</span></li>
+        <li><span>Minor</span><span class="meta-value">Innovation & Organization</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
         <li><span>GPA</span><span class="meta-value">3.6</span></li>
         <li><span>Sport</span><span class="meta-value">Water Polo</span></li>
@@ -95,67 +95,74 @@
         <li><span>Interview #2</span><span class="meta-value">95.20%</span></li>
         <li><span>Interview #3</span><span class="meta-value">96.10%</span></li>
         <li><span>Personality</span><span class="meta-value">Hustler</span></li>
-        <li><span>Leadership</span><span class="meta-value">Servant Leader</span></li>
-        <li><span>Team Phase</span><span class="meta-value">Execution Phase</span></li>
+        <li><span>Leadership</span><span class="meta-value">Servant Leader (People-First, Supportive)</span></li>
+        <li><span>Teamwork</span><span class="meta-value" id="teamworkField"></span></li>
       </ul>
     </div>
   </section>
 
 
-  <!-- OVERVIEW -->
+  <!-- ================= CONTENT ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Makenna is a proactive, high-urgency Execution Phase prospect defined by hustle, optimism, and forward motion. 
-      A 2025 **NCAA National Champion in Water Polo**, she brings intensity, conditioning discipline, and presence under pressure —
-      the type who thrives in a fast-paced, deliverable-driven environment.
+      Makenna is a high-motor operator with clear upward trajectory, known for her drive, responsiveness, and coachability.
+      She delivered one of the most consistent interview cycles in the cohort — all three interview scores landed above 95% — demonstrating
+      structured thinking, professionalism, and strong presence under pressure. Her STS academic track paired with her Innovation &
+      Organization concentration gives her a blend of analytical and product-oriented thinking that transfers well into client advisory
+      environments where context, pacing, and empathy matter.
       <br><br>
-      In MAP she ranked **Top 4 / 65**, posting elite interview scores across all 3 rounds, consistently prepared with polished 
-      answers and strong presence. In the Legacy Bowl she contributed to client-ready outputs on Morgan Stanley’s Parametric strategy, 
-      leaning into research, client segmentation and wealth management positioning.
-      <br><br>
-      Beyond MAP she has **real operator experience** — competition finalist in a venture capital business pitch, Excel-based 
-      inventory ownership, and four-year community impact work where she coordinated youth volunteers and built fundraising systems. 
-      Her profile reads hungry, dependable, and highly coachable — a talent whose confidence and technical polish will continue to rise.
+      Her work ethic stands out. She actively sought feedback throughout the season, implemented changes quickly, and often operated as a
+      cultural spark plug — raising standards by example rather than volume. Her ceiling rises as she sharpens financial fluency and 
+      applies her instinct for creativity and problem-solving to technical deliverables.
     </p>
   </section>
 
-
-  <!-- STRENGTHS -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li>Elite interview performer — 95%+ across all MAP rounds.</li>
-      <li>NCAA National Champion — proven competitor under pressure.</li>
-      <li>Execution-driven — strong ownership on deliverables and deadlines.</li>
-      <li>Experience building client-facing financial materials.</li>
-      <li>Community impact & leadership through Dream Foundation (250+ hours).</li>
-      <li>VC pitch finalist — exposure to strategy, pitching, and research.</li>
+      <li>Driven competitor with standout interview execution across all three rounds.</li>
+      <li>Strong initiative — consistently proactive, takes ownership, and responds well to coaching.</li>
+      <li>Creative problem-solver with STS + Innovation track well-aligned to client-facing work.</li>
+      <li>Positive energy and presence — helps elevate team dynamic and engagement.</li>
+      <li>Reliable follow-through and deadlines execution; strong season consistency signals.</li>
     </ul>
   </section>
 
-
-  <!-- DEVELOPMENT -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Continue layering financial terminology and capital markets fluency.</li>
-      <li>Confidence is high — next step is conciseness and tightening structure.</li>
-      <li>Seek more repetition in slide creation + live presentation moments.</li>
+      <li>Build more technical depth in wealth/portfolio concepts to match her communication skills.</li>
+      <li>Can occasionally rush early problem-framing — slowing down upfront raises output quality even further.</li>
+      <li>Continue refining case synthesis structure to maximize clarity and interpretive insight.</li>
     </ul>
   </section>
 
-
-  <!-- PROJECTION -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      Makenna projects as a **Round 2–3 Strong Recommendation** with serious upside as she deepens technical finance skills. 
-      She is dependable, energetic, and already high-performing — a strong candidate for Wealth Management Analyst pipelines, 
-      client-strategy work, or analyst programs valuing relationship EQ, deliverable speed, and athlete-caliber work ethic.
+      A Round 2–3 talent with clear growth velocity and the personality fit firms value — competitive, personable, and responsive to coaching.
+      With added reps in wealth management fundamentals and continued exposure to client-facing environments, Makenna projects as a 
+      future high-trust teammate who contributes both execution and culture value. Her MAP profile signals durability,
+      upward momentum, and long-term upside.
     </p>
   </section>
 
 </div>
+
+<!-- TEAMWORK AUTO-MAP -->
+<script>
+  const PHASE = "Execution";
+  const teamworkByPhase = {
+    "Initiation": ["Cooperative", "Inclusive, Team-First"],
+    "Planning": ["Detail-Oriented", "Precise, Quality-Focused"],
+    "Execution": ["Idea-Oriented", "Creative, Strategic"],
+    "Control": ["Logical", "Analytical, Evidence-Based"],
+    "Monitoring": ["Supportive", "Steady, Reliable"]
+  };
+  document.getElementById("teamworkField").innerText =
+    `${teamworkByPhase[PHASE][0]} (${teamworkByPhase[PHASE][1]})`;
+</script>
+
 </body>
 </html>
