--- a/bailey-oregan.html
+++ b/bailey-oregan.html
@@ -7,65 +7,52 @@
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
 
-  body { margin:0; background:#f5f7fb; font-family:'Montserrat', sans-serif;}
+  body {margin:0;background:#f5f7fb;font-family:'Montserrat',sans-serif;}
+  .prospect-page {max-width:960px;margin:0 auto 3rem;padding:1.5rem;color:#1a1a1a;}
 
-  .prospect-page { max-width:960px; margin:0 auto 3rem auto; padding:1.5rem 1rem; color:#1a1a1a;}
+  /* HERO */
+  .prospect-hero {display:flex;flex-wrap:wrap;justify-content:space-between;gap:1.25rem;
+    padding:1.75rem;border-radius:14px;background:#2E5084;color:#fff;margin-bottom:2rem;}
+  .prospect-name {font-family:'Archivo Black';font-size:2rem;margin-bottom:.25rem;text-transform:uppercase;}
+  .prospect-tagline {font-size:1rem;font-weight:600;margin-bottom:.15rem;}
+  .prospect-subtitle {font-size:.9rem;opacity:.9;margin:0;}
 
-  .prospect-hero {
-    display:flex; flex-wrap:wrap; justify-content:space-between; gap:1.25rem;
-    padding:1.75rem 1.25rem; border-radius:14px; background:#2E5084; color:#fff; margin-bottom:2rem;
-  }
+  .prospect-grade-card {min-width:200px;padding:1rem 1.25rem;border-radius:12px;
+    background:rgba(255,255,255,.15);border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(4px);}
+  .grade-label {font-size:.7rem;opacity:.8;text-transform:uppercase;}
+  .grade-score {font-family:'Archivo Black';font-size:2.2rem;margin:.2rem 0;}
+  .grade-tier {font-size:.9rem;font-weight:600;}
 
-  .prospect-name { font-family:'Archivo Black'; font-size:2rem; letter-spacing:.02em; margin:0 0 .25rem; text-transform:uppercase;}
-  .prospect-tagline { margin:0 0 .15rem; font-size:1rem; font-weight:600;}
-  .prospect-subtitle {margin:0; font-size:.9rem; opacity:.9;}
+  /* Recommendation Pill */
+  .recommendation-pill {display:flex;align-items:center;gap:6px;background:#fff;color:#2E5084;
+    padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;width:fit-content;}
+  .pill-box {width:12px;height:12px;border-radius:3px;}
+  .pill-green {background:#22c55e;} /* Top Recommendation */
 
-  .prospect-grade-card {
-    min-width:200px; padding:1rem 1.25rem;
-    border-radius:12px; background:rgba(255,255,255,.15);
-    border:1px solid rgba(255,255,255,.35); backdrop-filter:blur(4px);
-  }
+  /* META */
+  .prospect-meta {display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
+  .meta-column {flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
+  .meta-title {font-family:'Archivo Black';font-size:.9rem;color:#2E5084;margin-bottom:.7rem;text-transform:uppercase;}
+  .meta-list {list-style:none;margin:0;padding:0;}
+  .meta-list li {display:flex;justify-content:space-between;padding:.28rem 0;border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
+  .meta-value {text-align:right;margin-left:1rem;}
 
-  .grade-label{ font-size:.7rem; opacity:.8; text-transform:uppercase;}
-  .grade-score{ font-family:'Archivo Black'; font-size:2.2rem; margin:.15rem 0;}
-  .grade-tier{ font-size:.9rem; font-weight:600;}
-  .grade-note{ font-size:.75rem; opacity:.9;}
-
-  .recommendation-pill{
-    display:inline-flex; align-items:center; gap:5px; background:#fff; color:#2E5084;
-    padding:4px 10px; border:1px solid #dce2ee; border-radius:30px; font-weight:600;
-    font-size:.78rem; margin-top:.55rem; width:fit-content;
-  }
-
-  .pill-box{width:12px;height:12px;border-radius:3px;}
-  .pill-green{background:#22c55e;} .pill-yellow{background:#eab308;} .pill-red{background:#ef4444;}
-
-  .prospect-meta{display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
-  .meta-column{flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
-  .meta-title{font-family:'Archivo Black';font-size:.9rem;color:#2E5084;text-transform:uppercase;margin:0 0 .7rem;}
-  .meta-list{list-style:none;padding:0;margin:0;}
-  .meta-list li{display:flex;justify-content:space-between;padding:.28rem 0;border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
-  .meta-value{text-align:right;margin-left:1rem;}
-
-  .prospect-section{background:#fff;border-radius:12px;padding:1.15rem 1.35rem;border:1px solid #dce2ee;margin-bottom:1.4rem;}
-  .section-title{font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
-  .section-body{font-size:.9rem;line-height:1.52;}
-  .section-list{font-size:.9rem;line-height:1.52;padding-left:1.2rem;} .section-list li{margin-bottom:.38rem;}
-
-  @media(max-width:650px){
-    .meta-list li{flex-direction:column;align-items:flex-start;}
-    .meta-value{margin-left:0;margin-top:2px;text-align:left;}
-  }
+  /* CONTENT SECTIONS */
+  .prospect-section {background:#fff;border-radius:12px;padding:1.15rem 1.35rem;
+    border:1px solid #dce2ee;margin-bottom:1.4rem;}
+  .section-title {font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
+  .section-body {font-size:.9rem;line-height:1.52;}
+  .section-list li {font-size:.9rem;line-height:1.52;margin-bottom:.38rem;}
 </style>
 </head>
 
 <body>
 <div class="prospect-page">
 
-  <!-- HERO -->
+  <!-- ================= HERO ================= -->
   <section class="prospect-hero">
     <div>
-      <h1 class="prospect-name">BAILEY O'REGAN</h1>
+      <h1 class="prospect-name">Bailey O'Regan</h1>
       <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Wealth Management Prospect</p>
       <p class="prospect-subtitle">Stanford University · Swimming & Diving · Class of 2028</p>
     </div>
@@ -73,9 +60,7 @@
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
       <div class="grade-score">91</div>
-      <div class="grade-tier">Round 1–2 Projection</div>
-      <div class="grade-note">Top Recommendation</div>
-
+      <div class="grade-tier">Round 1–2</div>
       <div class="recommendation-pill">
         <div class="pill-box pill-green"></div>
         <div class="pill-box pill-green"></div>
@@ -85,13 +70,15 @@
     </div>
   </section>
 
+
+  <!-- ================= META ================= -->
   <section class="prospect-meta">
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
         <li><span>School</span><span class="meta-value">Stanford University</span></li>
-        <li><span>Major</span><span class="meta-value">Management Science and Engineering (MS&E)</span></li>
-        <li><span>Minor</span><span class="meta-value">N/A</span></li>
+        <li><span>Major</span><span class="meta-value">Management Science & Engineering</span></li>
+        <li><span>Minor</span><span class="meta-value">Management Science & Engineering</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
         <li><span>GPA</span><span class="meta-value">3.39</span></li>
         <li><span>Sport</span><span class="meta-value">Swimming & Diving</span></li>
@@ -103,62 +90,76 @@
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
         <li><span>Fellowship Rank</span><span class="meta-value">1 / 65</span></li>
-        <li><span>Interview #1 Grade</span><span class="meta-value">100%</span></li>
-        <li><span>Interview #2 Grade</span><span class="meta-value">98.6%</span></li>
-        <li><span>Interview #3 Grade</span><span class="meta-value">91.1%</span></li>
-        <li><span>Personality</span><span class="meta-value">Goal Keeper (Reliable, Team-First)</span></li>
+        <li><span>Interview #1</span><span class="meta-value">100%</span></li>
+        <li><span>Interview #2</span><span class="meta-value">98.60%</span></li>
+        <li><span>Interview #3</span><span class="meta-value">91.10%</span></li>
+        <li><span>Personality</span><span class="meta-value">Goal Keeper (Disciplined, Structured)</span></li>
         <li><span>Leadership</span><span class="meta-value">Transactional Leader (Incentive-Driven, Standards-Based)</span></li>
-        <li><span>Teamwork</span><span class="meta-value">Cooperative (Inclusive, Team-First)</span></li>
+        <li><span>Teamwork</span><span class="meta-value" id="teamworkField"></span></li>
       </ul>
     </div>
   </section>
 
+
+  <!-- ================= CONTENT ================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Bailey brings one of the most decorated athletic résumés in the Legacy Bowl cohort — a Design Human Behavior major at Stanford,
-      Canadian National Team member, PanAm & World Championship open-water swimmer, and high-capacity operator who balances elite training with campus leadership.
-      She pairs strong communication and mentorship instincts with growing financial literacy and a clear upward curve in business execution.
-      Bailey presents as a thoughtful, dependable teammate who elevates collective performance through preparation, emotional composure,
-      and culture-setting behaviors. Her upside is compelling — particularly as she builds confidence translating athletic discipline
-      into professional conviction and industry fluency.
+      Bailey is a composed, high-ceiling prospect who combines technical rigor with poise in professional settings.
+      Her MS&E academic track — one of Stanford’s most analytical programs — signals a strong quantitative foundation with exposure to 
+      optimization, decision analysis, and data-driven problem solving. In MAP interview reps, she demonstrated structured thinking, calm 
+      delivery under time pressure, and polished communication — finishing with three of the top interview scores in the cohort.
+      <br><br>
+      As a student-athlete balancing Division I training volume with coursework, Bailey approached assignments with discipline and 
+      consistency. Her personality aligns with a Goal Keeper archetype — dependable, organized, and execution-focused — a profile that 
+      translates smoothly into wealth advisory, risk analysis, and client-facing work.
     </p>
   </section>
 
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li>Elite athletic pedigree — Canadian National Team, PanAm & World Championship experience</li>
-      <li>Strong leadership maturity; MAP Captain & campus leadership experience</li>
-      <li>High reliability & execution consistency across groups and deliverables</li>
-      <li>Fast learner with emerging financial/wealth strategy understanding</li>
-      <li>Strong interpersonal EQ — mentorship, youth coaching, parent communication</li>
-      <li>Design thinking + creativity from MS&E background</li>
-      <li>Resilient competitor accustomed to high-pressure environments</li>
-      <li>Professional communication presence</li>
+      <li>Elite interview performer — consistent top scores across all three rounds.</li>
+      <li>Structured communicator with organized frameworks and clarity in delivery.</li>
+      <li>Strong execution discipline — meets expectations and handles workload reliably.</li>
+      <li>Quantitative foundation from MS&E, positioning her well for finance environments.</li>
+      <li>Professional presence with high composure in evaluative settings.</li>
     </ul>
   </section>
 
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Still early in technical finance development — opportunity to deepen product fluency</li>
-      <li>Next step is sharpening structured business vocabulary + analysis frameworks</li>
-      <li>Can increase vocal presence in group settings to drive direction more often</li>
-      <li>Upside in converting instinct into quantified outputs for case work</li>
+      <li>Continue developing wealth management technical fluency — portfolios, asset allocation, macro linking.</li>
+      <li>Increase vocal ownership in team settings to match capability and presence.</li>
+      <li>Push beyond “solid execution” to proactive idea generation in group work.</li>
     </ul>
   </section>
 
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      Bailey projects as a Round 1–2 wealth management candidate — coachable, driven, and team-first with upside in client-facing environments.
-      With continued progress in technical competence, portfolio rationale, and advisor-style communication,
-      she has the runway to grow into a standout professional serving athlete family office and private wealth relationships.
-      Expect her stock to rise quickly as confidence compounds with skill development.
+      Bailey projects as a Round 1–2 prospect with a high-floor profile built on execution reliability and clear communication poise.
+      With increased initiative in ideation and stronger visibility within collaborative work, she has upside to become a trusted analyst 
+      and high-value teammate within wealth management teams.
     </p>
   </section>
 
 </div>
+
+<!-- TEAMWORK AUTO-MAP -->
+<script>
+  const PHASE = "Initiation";
+  const teamworkByPhase = {
+    "Initiation": ["Cooperative", "Inclusive, Team-First"],
+    "Planning": ["Detail-Oriented", "Precise, Quality-Focused"],
+    "Execution": ["Idea-Oriented", "Creative, Strategic"],
+    "Control": ["Logical", "Analytical, Evidence-Based"],
+    "Monitoring": ["Supportive", "Steady, Reliable"]
+  };
+  document.getElementById("teamworkField").innerText =
+    `${teamworkByPhase[PHASE][0]} (${teamworkByPhase[PHASE][1]})`;
+</script>
+
 </body>
 </html>
